--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,63 @@
+allure-pytest==2.12.0
+allure-python-commons==2.12.0
 astroid==2.12.13
 async-generator==1.10
 attrs==22.1.0
+Brotli==1.0.9
 certifi==2022.9.24
+charset-normalizer==2.1.1
+click==8.1.3
+ConfigArgParse==1.5.3
 dill==0.3.6
 exceptiongroup==1.0.4
+execnet==1.9.0
+Flask==2.2.2
+Flask-BasicAuth==0.2.0
+Flask-Cors==3.0.10
+gevent==22.10.2
+geventhttpclient==2.0.8
+greenlet==2.0.1
 h11==0.14.0
 idna==3.4
 iniconfig==1.1.1
 isort==5.10.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
 lazy-object-proxy==1.8.0
+locust==2.14.0
+Mako==1.2.4
+MarkupSafe==2.1.1
 mccabe==0.7.0
+msgpack==1.0.4
 outcome==1.2.0
 packaging==21.3
+parse==1.19.0
+parse-type==0.6.0
 platformdirs==2.5.4
 pluggy==1.0.0
+psutil==5.9.4
 pylint==2.15.6
 pyparsing==3.0.9
 PySocks==1.7.1
 pytest==7.2.0
+pytest-bdd==6.1.1
+pytest-rerunfailures==10.3
+pytest-xdist==3.1.0
+pyzmq==24.0.1
+requests==2.28.1
+roundrobin==0.0.4
 selenium==4.7.2
+six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 tomli==2.0.1
 tomlkit==0.11.6
 trio==0.22.0
 trio-websocket==0.9.2
+typing_extensions==4.4.0
 urllib3==1.26.13
+Werkzeug==2.2.2
 wrapt==1.14.1
 wsproto==1.2.0
+zope.event==4.6
+zope.interface==5.5.2
