Files from lesson 27: DB

--- a/requirements.txt
+++ b/requirements.txt
@@ -29,12 +29,14 @@ Mako==1.2.4
 MarkupSafe==2.1.1
 mccabe==0.7.0
 msgpack==1.0.4
+mysql-connector-python==8.0.31
 outcome==1.2.0
 packaging==21.3
 parse==1.19.0
 parse-type==0.6.0
 platformdirs==2.5.4
 pluggy==1.0.0
+protobuf==3.20.1
 psutil==5.9.4
 pylint==2.15.6
 pyparsing==3.0.9
